# profscout

./: .gitignore  .gitmodules  LICENSE  PLAN.md  README.md  main.py  pyproject.toml  test_openalex.py
.github/workflows/: deploy_pages.yml  update_data.yml
public/: index.html
public/data/: areas.json  institutions.json
public/src/: main.js  style.css
scripts/: __init__.py  build_data.py  serve.py
